# classic-games

./: .gitignore  Cargo.toml
_template/: Cargo.toml  Cross.toml
_template/src/: assets.rs  consts.rs  globals.rs  main.rs
cgc_lib/: Cargo.toml
cgc_lib/src/: common_assets.rs  lib.rs  simple_menu.rs  utils.rs
games/pipes/: Cargo.toml  index.html
games/pipes/src/: main.rs
games/pipes/src/difficulty_select/: mod.rs
games/pipes/src/game_over/: components.rs
games/pipes/src/game_screen/: componenets.rs
games/pipes/src/utils/: components.rs  direction.rs  systems.rs
games/snake/: Cargo.toml  index.html
games/snake/src/: consts.rs  main.rs
games/snake/src/death_screen/: components.rs  systems.rs
games/snake/src/start_screen/: mod.rs
games/tetris/: Cargo.toml  index.html
games/tetris/src/: state.rs
games/tetris/src/game_screen/: debug.rs  systems.rs
games/tetris/src/gameover_screen/: mod.rs
games/tetris/src/start_menu/: mod.rs
games/tetris/src/utils/: mod.rs  rotations.rs
pipes/: Cargo.toml
pipes/src/: assets.rs  consts.rs  globals.rs  main.rs
pipes/src/difficulty_select/: components.rs  mod.rs  states.rs  systems.rs
pipes/src/game_over/: components.rs  mod.rs  systems.rs
pipes/src/game_screen/: events.rs  game_board.rs  mod.rs  systems.rs
pipes/src/start_menu/: mod.rs  systems.rs
pipes/src/utils/: maze.rs  mod.rs  wrapper.rs
snake/: Cargo.toml
snake/src/: assets.rs  consts.rs  main.rs
snake/src/death_screen/: components.rs  systems.rs
snake/src/game_screen/: events.rs
snake/src/start_screen/: components.rs  systems.rs
snake/src/utils/: components.rs
snaker/: Cargo.toml  Cross.toml
snaker/src/: consts.rs  main.rs  state.rs
snaker/src/death_screen/: mod.rs  systems.rs
snaker/src/game_screen/: components.rs  mod.rs  resources.rs  systems.rs
snaker/src/start_screen/: systems.rs
snaker/src/utils/: systems.rs
tetris/: Cargo.toml
tetris/src/: assets.rs  consts.rs  main.rs
tetris/src/game_screen/: components.rs  events.rs  mod.rs  resources.rs  systems.rs  timers.rs
tetris/src/gameover_screen/: components.rs  systems.rs
tetris/src/start_menu/: systems.rs
tetris/src/utils/: dotarray.rs  mod.rs  systems.rs
